<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.sasolucoes.yourmarket.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/sync_categories"
        android:orderInCategory="110"
        android:title="@string/sync_categories"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sync_subcategories"
        android:orderInCategory="120"
        android:title="@string/sync_subcategories"
        app:showAsAction="never"/>

    <item
        android:id="@+id/seller_activity"
        android:orderInCategory="130"
        android:title="@string/contact_lb"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/open_categories"
        android:orderInCategory="120"
        android:title="@string/open_categories"
        app:showAsAction="never"/>
    
</menu>

