<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/seller_contact_fragment"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:showDividers="middle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:id="@+id/text_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_lb"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="@android:color/holo_purple" />

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="@android:color/holo_purple" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:id="@+id/text_cellphone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cellphone_lb"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="@android:color/holo_purple" />

    <TextView
        android:id="@+id/text_cellphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cellphone"
        android:textColor="@android:color/holo_purple" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:id="@+id/text_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_lb"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textStyle="bold"
        android:textColor="@android:color/holo_purple"/>

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@android:color/holo_purple" />

</LinearLayout>

